# agent-session-recorder

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: changes.diff  context-note.md  pytest-output.txt  run_demo.ps1  run_demo.sh  sample_transcript.jsonl
src/agent_session_recorder/: __init__.py  cli.py  doctor.py  exporters.py  importers.py  model.py  redaction.py  summarizer.py  timeline.py  util.py
tests/: test_cli.py  test_doctor.py  test_exporters.py  test_importers.py  test_model.py  test_redaction.py  test_timeline.py
